5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_996.log
== TEST (2019-03-12 17:31:30) 
-- CODE:
print(" *****")
print("(* 0 0 *) ")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
*****
(* 0 0 *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:33) 
-- CODE:
print(" *****")
print("(* 0 0 *) ")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
*****
(* 0 0 *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:57) 
-- CODE:
print(" *****")
print("(* 0 0 *)")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
*****
(* 0 0 *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:33:45) 
-- CODE:
print(" *****")
print("(* o o *)")
print("(* o *)")
print("* _ _ _ *")
print("***** ")
-- EXECUTION TIME:
0.206016
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
(* o *)
* _ _ _ *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:36:57) 
-- CODE:
print("*****")
print("(* o o *)")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- EXECUTION TIME:
0.2432
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
(* ^ *)
* _ _ _ *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:01) 
-- CODE:
print("*****")
print("(* o o *)")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- OUTPUT:
*****
(* o o *)
(* ^ *)
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:16) 
-- CODE:
print("*****")
print("(* o o *)")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- OUTPUT:
*****
(* o o *)
(* ^ *)
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:30) 
-- CODE:
print("*****")
print("(* o o *)")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- OUTPUT:
*****
(* o o *)
(* ^ *)
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:28) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- OUTPUT:
*****
* o o *
(* ^ *)
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:42) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- EXECUTION TIME:
0.256083
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
(* ^ *)
* _ _ _ *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:12) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* - - - *")
print("***** ")
-- OUTPUT:
*****
* o o *
(* ^ *)
* - - - *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:14) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* - - - *")
print("***** ")
-- EXECUTION TIME:
0.163174
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
(* ^ *)
* - - - *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:01) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- OUTPUT:
*****
* o o *
(* ^ *)
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:03) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- EXECUTION TIME:
0.180132
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
(* ^ *)
* _ _ _ *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:40) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
-- OUTPUT:
*****
* o o *
(* ^ *)
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:06) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")
Console
Shell
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Console
NameError: name 'Console' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:20) 
-- CODE:
print ("*****")
print ("* o o *")
print("(* ^ *)")
print("* _ _ _ *")
print("***** ")

-- OUTPUT:
*****
* o o *
(* ^ *)
* _ _ _ *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:28) 
-- CODE:
print (" ***** ")
print ("* o o *")
print("( * ^ *)")
print("* _ _ _ *")
print("  ***** ")

-- OUTPUT:
***** 
* o o *
( * ^ *)
* _ _ _ *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:45:17) 
-- CODE:
print (" ***** ")
print ("* o o *")
print("(*  ^  *)")
print(" *- - -*")
print("  ***** ")

-- OUTPUT:
***** 
* o o *
(*  ^  *)
 *- - -*
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:45:26) 
-- CODE:
print (" ***** ")
print ("* o o *")
print("(*  ^  *)")
print(" *- - -*")
print("  ***** ")

-- EXECUTION TIME:
0.127214
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
(*  ^  *)
 *- - -*
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:45:29) 
-- CODE:
print (" ***** ")
print ("* o o *")
print("(*  ^  *)")
print(" *- - -*")
print("  ***** ")

-- OUTPUT:
***** 
* o o *
(*  ^  *)
 *- - -*
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:15) 
-- CODE:
print ("  *****  ")
print ("*  o o  *")
print("(*  ^  *)")
print(" *- - -*")
print("  ***** ")

-- OUTPUT:
*****  
*  o o  *
(*  ^  *)
 *- - -*
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:34) 
-- CODE:
print ("  *****  ")
print ("* o o *")
print("(*  ^  *)")
print(" *- - -*")
print("  ***** ")

-- OUTPUT:
*****  
* o o *
(*  ^  *)
 *- - -*
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:21) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print("(*  ^  *)")
print(" *- - -*")
print("  ***** ")

-- OUTPUT:
*****  
 * o o * 
(*  ^  *)
 *- - -*
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:25) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print("(*  ^  *)")
print(" *- - -*")
print("  ***** ")

-- EXECUTION TIME:
0.276165
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
 * o o * 
(*  ^  *)
 *- - -*
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:39) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print("(*  ^  *)")
print(" *- - -* ")
print("  *****  ")

-- OUTPUT:
*****  
 * o o * 
(*  ^  *)
 *- - -* 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:42) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print("(*  ^  *)")
print(" *- - -* ")
print("  *****  ")

-- EXECUTION TIME:
0.157756
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
 * o o * 
(*  ^  *)
 *- - -* 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:47) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print("(*  ^  *)")
print(" *- - -* ")
print("  *****  ")

-- OUTPUT:
*****  
 * o o * 
(*  ^  *)
 *- - -* 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:19) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print("(*  ^  *)")
print(" * --- * ")
print("  *****  ")

-- OUTPUT:
*****  
 * o o * 
(*  ^  *)
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:20) 
-- CODE:
print("  *****  ")
print(" * o o * ")
print("(*  ^  *)")
print(" * --- * ")
print("  *****  ")

-- EXECUTION TIME:
0.219475
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
 * o o * 
(*  ^  *)
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:23) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print("(*  ^  *)")
print(" * --- * ")
print("  *****  ")

-- OUTPUT:
*****  
(* o o *)
(*  ^  *)
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:50:14) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- * ")
print("  *****  ")

-- OUTPUT:
*****  
(* o o *)
 *  ^  * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:50:16) 
-- CODE:
print("  *****  ")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- * ")
print("  *****  ")

-- EXECUTION TIME:
0.134687
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****  
(* o o *)
 *  ^  * 
 * --- * 
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
